logs/ramen.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/motor'...
Listing './lib/python3.5/site-packages/motor/aiohttp'...
Listing './lib/python3.5/site-packages/motor/frameworks'...
Listing './lib/python3.5/site-packages/motor/frameworks/asyncio'...
Listing './lib/python3.5/site-packages/motor/frameworks/tornado'...
Listing './lib/python3.5/site-packages/motor-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/ramen'...
Compiling './lib/python3.5/site-packages/ramen/admin.py'...
***   File "./lib/python3.5/site-packages/ramen/admin.py", line 18
    print app, 'failed'
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ramen/bin'...
Compiling './lib/python3.5/site-packages/ramen/boot.py'...
***   File "./lib/python3.5/site-packages/ramen/boot.py", line 28
    print 'Starting on 0.0.0.0:%s' % port
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ramen/db'...
Compiling './lib/python3.5/site-packages/ramen/db/fields.py'...
***   File "./lib/python3.5/site-packages/ramen/db/fields.py", line 128
    print 'pre RE match'
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ramen/decorators.py'...
***   File "./lib/python3.5/site-packages/ramen/decorators.py", line 34
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ramen/forms.py'...
***   File "./lib/python3.5/site-packages/ramen/forms.py", line 65
    print 'ASDASD', data['collection']
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ramen/jinja2htmlcompress.py'...
***   File "./lib/python3.5/site-packages/ramen/jinja2htmlcompress.py", line 172
    print tmpl.render(title=42, href='index.html')
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ramen/mimemail'...
Listing './lib/python3.5/site-packages/ramen/templates'...
Listing './lib/python3.5/site-packages/ramen/templates/project'...
Listing './lib/python3.5/site-packages/ramen/templates/project/assets'...
Listing './lib/python3.5/site-packages/ramen/templates/project/core'...
Listing './lib/python3.5/site-packages/ramen/templates/project/custom'...
Listing './lib/python3.5/site-packages/ramen/templates/project/handlers'...
Listing './lib/python3.5/site-packages/ramen/templates/project/models'...
Listing './lib/python3.5/site-packages/ramen/templates/project/routes'...
Listing './lib/python3.5/site-packages/ramen-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
